--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
       rel="stylesheet"
     />
-    <title>Cool Website Here!!!</title>
+    <title>Coding Assignment</title>
   </head>
   <body>
     <div class="heading_and_nav_bar">
