--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
       rel="stylesheet"
     />
-    <title>Coding Assignment</title>
+    <title>Fun Website Here!!!</title>
   </head>
   <body>
     <div class="heading_and_nav_bar">
       <div id="heading">
-        <h1>Hello World! <i class="fa-brands fa-html5"></i></h1>
+        <h1>Hello Everybody! <i class="fa-brands fa-html5"></i></h1>
       </div>
       <div class="nav_bar">
         <span><p>Home</p></span>
         <span><p>About Me</p></span>
         <span><p>Blog Posts</p></span>
-        <span><p>Contact</p></span>
+        <span><p>Stuff</p></span>
       </div>
     </div>
     <img
