Made changes in navbar and Top heading

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <div class="heading_and_nav_bar">
       <div id="heading">
-        <h1>Hello World! <i class="fa-brands fa-html5"></i></h1>
+        <h1>Hello Everybody! <i class="fa-brands fa-html5"></i></h1>
       </div>
       <div class="nav_bar">
-        <span><p>Home</p></span>
-        <span><p>About Me</p></span>
-        <span><p>Blog Posts</p></span>
         <span><p>Stuff</p></span>
+        <span><p>More Stuff</p></span>
+        <span><p>Even More Stuff</p></span>
+        <span><p>STUFF</p></span>
       </div>
     </div>
     <img
