--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span><p>Stuff</p></span>
         <span><p>More Stuff</p></span>
         <span><p>Even More Stuff</p></span>
-        <span><p>Stuff from Test</p></span>
+        <span><p>STUFF</p></span>
       </div>
     </div>
     <img
